# Pollentia

./: .gitignore  CMakeLists.txt  README.md
cmake/: CmakeVars.cmake  FindOpenGL.cmake
src/: Node.cpp  Node.h
src/api/: GameEntity.h
src/definitions/: CommonHeader.h  PrimitiveTypes.h
src/entities/: CommonEntityHeader.h  Entity.cpp  Entity.h  Id.h
src/geometry/: Vector2.cpp  Vector2.h
src/geometry/conversion/: AngleConversion.cpp
src/libs/api/game_entities/: GameEntity.h  GameTransformComponent.h
src/libs/entities/: CommonEntityHeader.h  Entity.cpp  Entity.h  Id.h  TransformationComponent.cpp  TransformationComponent.h
src/libs/math/: MathTypes.h
src/libs/math/vectors/: Vectors.h
src/libs/utilities/: Utilities.h
src/math/: CommonMathHeader.h
src/math/geometry/conversion/: AngleConversion.h
src/math/geometry/vectors/: Vectors.h
src/tests/: main.cpp
src/utilities/: Utilities.h
